k8s/apps/actual-budget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:latest
          ports:
            - containerPort: 5006
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget-data
