k8s/apps/actual-budget/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-ingress
  namespace: actual-budget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`finances.armleth.fr`)
      kind: Rule
      services:
        - name: actual-budget-service
          port: 5006
  tls:
    secretName: actual-budget-tls-secret
